--- a/app/src/main/res/drawable/ic_star_filled_24dp.xml
+++ b/app/src/main/res/drawable/ic_star_filled_24dp.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="960">
   <path
       android:pathData="m233,840 l65,-281L80,370l288,-25 112,-265 112,265 288,25 -218,189 65,281 -247,-149 -247,149Z"
-      android:fillColor="#e3e3e3"/>
+      android:fillColor="#FFD600"/>
 </vector>
