--- a/app/src/main/res/layout/item_horizontal_card.xml
+++ b/app/src/main/res/layout/item_horizontal_card.xml
@@ -46,7 +46,7 @@
                 <ImageView
                     android:layout_width="14dp"
                     android:layout_height="14dp"
-                    android:src="@drawable/ic_star_24dp" />
+                    android:src="@drawable/ic_star_filled_24dp" />
                 <TextView
                     android:id="@+id/tv_item_rating"
                     android:layout_width="wrap_content"
