--- a/app/src/main/res/layout/fragment_onboarding_1.xml
+++ b/app/src/main/res/layout/fragment_onboarding_1.xml
@@ -1,44 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/tvSkip"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="SKIP"
+        android:textStyle="bold"
+        android:textSize="14sp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="24dp"/>
+
     <ImageView
         android:id="@+id/imgOnboarding1"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:src="@drawable/placholder"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/tvTitle1"
+        android:layout_width="match_parent"
+        android:layout_height="478dp"
+        android:src="@drawable/onboard_3"
+        app:layout_constraintTop_toBottomOf="@id/tvSkip"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="64dp"/>
+        android:layout_marginTop="16dp"/>
 
     <TextView
         android:id="@+id/tvTitle1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Data film selalu terupdate"
+        android:text="Selalu Update Film &amp; Serial"
         android:textStyle="bold"
-        android:textSize="20sp"
+        android:textSize="22sp"
         app:layout_constraintTop_toBottomOf="@id/imgOnboarding1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="32dp"/>
+        android:layout_marginTop="24dp"/>
 
     <TextView
         android:id="@+id/tvDesc1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Koleksi film dan serial terbaru, update setiap hari."
+        android:text="Nikmati koleksi film &amp; serial terbaru, update setiap hari. Tidak akan ketinggalan tontonan favorit!"
         android:textAlignment="center"
-        android:textSize="16sp"
+        android:textSize="15sp"
         app:layout_constraintTop_toBottomOf="@id/tvTitle1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="12dp"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"/>
+
+    <View
+        android:id="@+id/lineIndicator"
+        android:layout_width="80dp"
+        android:layout_height="4dp"
+        app:layout_constraintTop_toBottomOf="@id/tvDesc1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="24dp"/>
+
+    <Button
+        android:id="@+id/btnNext"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="52dp"
+        android:layout_marginEnd="8dp"
+        android:text="NEXT"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lineIndicator" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
