--- a/app/src/main/res/layout/fragment_onboarding_2.xml
+++ b/app/src/main/res/layout/fragment_onboarding_2.xml
@@ -4,41 +4,92 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/tvSkip"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="SKIP"
+        android:textStyle="bold"
+        android:textSize="14sp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="24dp"/>
+
     <ImageView
         android:id="@+id/imgOnboarding2"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:src="@drawable/placholder"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/tvTitle2"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="478dp"
+        android:layout_marginTop="16dp"
+        android:src="@drawable/onboard_2"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="64dp"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvSkip" />
 
     <TextView
         android:id="@+id/tvTitle2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Bisa membuat &amp; berbagi playlist film"
+        android:text="Buat &amp; Bagikan Playlist Film"
         android:textStyle="bold"
-        android:textSize="20sp"
+        android:textSize="22sp"
         app:layout_constraintTop_toBottomOf="@id/imgOnboarding2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="32dp"/>
+        android:layout_marginTop="24dp"/>
 
     <TextView
         android:id="@+id/tvDesc2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Buat playlist film favoritmu dan bagikan ke teman."
+        android:text="Kumpulkan film favoritmu dalam playlist, lalu bagikan ke teman atau keluarga dengan mudah."
         android:textAlignment="center"
-        android:textSize="16sp"
+        android:textSize="15sp"
         app:layout_constraintTop_toBottomOf="@id/tvTitle2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="12dp"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"/>
+
+    <View
+        android:id="@+id/lineIndicator"
+        android:layout_width="80dp"
+        android:layout_height="4dp"
+        app:layout_constraintTop_toBottomOf="@id/tvDesc2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="24dp"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@id/lineIndicator"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="32dp"
+        android:gravity="center">
+
+        <Button
+            android:id="@+id/btnBack"
+            android:layout_width="0dp"
+            android:layout_height="48dp"
+            android:layout_weight="1"
+            android:text="BACK"/>
+
+        <Space
+            android:layout_width="16dp"
+            android:layout_height="0dp" />
+
+        <Button
+            android:id="@+id/btnNext"
+            android:layout_width="0dp"
+            android:layout_height="48dp"
+            android:layout_weight="1"
+            android:text="NEXT"/>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
