--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -47,6 +47,9 @@
         <action
             android:id="@+id/action_profileFragment_to_settingsFragment"
             app:destination="@id/navigation_settings" />
+        <action
+            android:id="@+id/action_profileFragment_to_profileUpdateFragment"
+            app:destination="@id/profileUpdateFragment" />
     </fragment>
 
     <fragment
@@ -80,4 +83,9 @@
         android:label="Search"
         tools:layout="@layout/fragment_search" />
 
+    <fragment
+        android:id="@+id/profileUpdateFragment"
+        android:name="com.saefulrdevs.mubeego.ui.main.profile.ProfileUpdateFragment"
+        android:label="Edit Profile"
+        tools:layout="@layout/fragment_profile_update" />
 </navigation>
