fix: playlist add and update

--- a/app/src/main/res/layout/dialog_add_playlist.xml
+++ b/app/src/main/res/layout/dialog_add_playlist.xml
@@ -19,6 +19,21 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_marginTop="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Playlist Notes">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/etPlaylistNotes"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text"
+            android:maxLines="1" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
     <com.google.android.material.checkbox.MaterialCheckBox
         android:id="@+id/cbPublic"
         android:layout_width="match_parent"
