--- a/app/src/main/res/drawable/ic_forward_24dp.xml
+++ b/app/src/main/res/drawable/ic_forward_24dp.xml
@@ -3,7 +3,7 @@
     android:height="24dp"
     android:viewportWidth="960"
     android:viewportHeight="960">
-    <path
-        android:fillColor="?attr/colorControlNormal"
-        android:pathData="m640,680 l-57,-56 184,-184 -184,-184 57,-56 240,240 -240,240ZM80,760v-160q0,-83 58.5,-141.5T280,400h247L383,256l57,-56 240,240 -240,240 -57,-56 144,-144L280,480q-50,0 -85,35t-35,85v160L80,760Z" />
+  <path
+      android:pathData="m640,680 l-57,-56 184,-184 -184,-184 57,-56 240,240 -240,240ZM80,760v-160q0,-83 58.5,-141.5T280,400h247L383,256l57,-56 240,240 -240,240 -57,-56 144,-144L280,480q-50,0 -85,35t-35,85v160L80,760Z"
+      android:fillColor="#e3e3e3"/>
 </vector>
