--- a/app/src/main/res/layout/fragment_onboarding_1.xml
+++ b/app/src/main/res/layout/fragment_onboarding_1.xml
@@ -66,9 +66,7 @@
         android:id="@+id/btnNext"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="52dp"
-        android:layout_marginEnd="8dp"
+        android:layout_margin="16dp"
         android:text="NEXT"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
