--- a/app/src/main/res/layout/fragment_onboarding_2.xml
+++ b/app/src/main/res/layout/fragment_onboarding_2.xml
@@ -64,21 +64,23 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/lineIndicator"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="32dp"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/lineIndicator">
 
         <Button
             android:id="@+id/btnBack"
             android:layout_width="0dp"
             android:layout_height="48dp"
             android:layout_weight="1"
-            android:text="BACK"/>
+            android:text="BACK" />
 
         <Space
             android:layout_width="16dp"
@@ -89,7 +91,7 @@
             android:layout_width="0dp"
             android:layout_height="48dp"
             android:layout_weight="1"
-            android:text="NEXT"/>
+            android:text="NEXT" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
