--- a/app/src/main/res/layout/fragment_profile_update.xml
+++ b/app/src/main/res/layout/fragment_profile_update.xml
@@ -14,25 +14,26 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:orientation="vertical"
-            android:gravity="center">
+            android:gravity="center"
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/imgProfile"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:src="@drawable/ic_profile_24dp"
-                android:background="@drawable/bg_chip"
-                android:scaleType="centerInside"
                 android:layout_gravity="center"
-                android:padding="16dp" />
+                android:background="@drawable/bg_chip"
+                android:padding="16dp"
+                android:scaleType="centerInside"
+                android:src="@drawable/ic_profile_24dp" />
+
             <TextView
                 android:id="@+id/tvChangePicture"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:text="Change Picture"
-                android:textSize="14sp"
-                android:layout_marginTop="8dp" />
+                android:textSize="14sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -45,10 +46,9 @@
                 android:id="@+id/tv_username"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:text="Username"
-                android:textStyle="bold"
-                android:textColor="#222"
-                android:layout_marginTop="8dp" />
+                android:textStyle="bold" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/tf_username"
@@ -69,10 +69,10 @@
                 android:id="@+id/tv_email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:text="Email"
-                android:textStyle="bold"
-                android:textColor="#222"
-                android:layout_marginTop="8dp" />
+                android:textStyle="bold" />
+
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/tf_email"
                 style="@style/BaseTextInputLayout"
@@ -83,8 +83,8 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/etEmail"
                     style="@style/BaseInputText"
-                    android:inputType="textEmailAddress"
                     android:enabled="false"
+                    android:inputType="textEmailAddress"
                     tools:text="@string/email" />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -93,33 +93,33 @@
                 android:id="@+id/tv_password"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:text="Change Password"
-                android:textStyle="bold"
-                android:textColor="#222"
-                android:layout_marginTop="8dp" />
+                android:textStyle="bold" />
+
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/tf_password"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp">
+
                 <com.saefulrdevs.mubeego.ui.components.CustomEditTextEmail
                     android:id="@+id/etPassword"
                     style="@style/BaseInputText"
-                    android:inputType="textPassword"
-                    android:hint="Change Password" />
+                    android:hint="Change Password"
+                    android:inputType="textPassword" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.button.MaterialButton
-                android:theme="@style/BaseOutlinedButton"
                 android:id="@+id/btnUpdate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Update"
-                android:textColor="#FFF"
-                android:textStyle="bold"
                 android:layout_marginTop="16dp"
-                android:layout_marginBottom="8dp" />
+                android:layout_marginBottom="8dp"
+                android:text="Update"
+                android:textStyle="bold"
+                android:theme="@style/BaseOutlinedButton" />
         </LinearLayout>
     </LinearLayout>
 
