--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -39,7 +39,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
-            android:text="Please, enter your email address. You will receive a link to create a new password via email."
+            android:text="Harap masukkan alamat email Anda. Anda akan menerima tautan untuk membuat kata sandi baru melalui email."
             android:textAlignment="center"
             android:textSize="14sp" />
 
